[package]
name = "air_quallity_regressor_preprocess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
csv = "1.2.2"
dashmap = "5.4.0"
once_cell = "1.18.0"
rand = "0.8.5"
rayon = "1.7.0"
